dynamic emoji list, prob should just use 3rd party library to get better list or make one maanuuly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,9 @@ form {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.hidden {
+    display: none;
+}
 label {
     display: block;
     margin-bottom: 5px;
